# PryanetShare

./: Makefile.am  News.txt  PryanetShare.txt  README.md  autogen.sh  configure.ac  rebrand.pl
PryanetLib/: Defines.cs  Defines.cs.in  Makefile.am  PryanetBackend.cs  PryanetChangeSet.cs  PryanetConfig.cs  PryanetExtensions.cs  PryanetFetcherBase.cs  PryanetFetcherSSH.cs  PryanetLib.csproj  PryanetLib.sln  PryanetListenerBase.cs  PryanetListenerFactory.cs  PryanetListenerTcp.cs  PryanetLogger.cs  PryanetRepoBase.cs  PryanetUser.cs  PryanetWatcher.cs  PryanetWrappers.cs
PryanetLib/Git/: Makefile.am  PryanetFetcherGit.cs  PryanetGit.cs  PryanetLib.Git.csproj  PryanetRepoGit.cs
PryanetShare/: Program.cs  PryanetAboutController.cs  PryanetAvatars.cs  PryanetBubblesController.cs  PryanetControllerBase.cs  PryanetEventLogController.cs  PryanetExtensions.cs  PryanetInvite.cs  PryanetKeys.cs  PryanetPlugin.cs  PryanetSetupController.cs  PryanetStatusIconController.cs
PryanetShare/Common/HTML/: event-log.html
PryanetShare/Common/HTML/protocol-handler-test/: invite.xml  protocol-handler-test.htm
PryanetShare/Common/Plugins/: bitbucket.xml  github.xml  gitorious.xml  own-server.xml  planio.xml  ssnet.xml
PryanetShare/Common/Translations/: POTFILES.in  POTFILES.skip  README.transifex  ar.po  bg.po  ca.po  cs_CZ.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  nl.po  nn_NO.po  no_NO.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sr_RS.po  sv.po  te.po  uk.po  zh_CN.po  zh_TW.po
PryanetShare/Linux/: Makefile.am  PryanetAbout.cs  PryanetBubbles.cs  PryanetController.cs  PryanetEventLog.cs  PryanetSetup.cs  PryanetSetupWindow.cs  PryanetSpinner.cs  PryanetStatusIcon.cs  PryanetUI.cs  PryanetUIHelpers.cs  README.md  pryanetshare  pryanetshare-invite-opener.desktop  pryanetshare.desktop  pryanetshare.in
PryanetShare/Linux/Pixmaps/icons/: Makefile.am
PryanetShare/Linux/Pixmaps/icons/gnome/: Makefile.am
PryanetShare/Mac/: AppDelegate.cs  Info.plist  MainMenu.xib  MainMenu.xib.designer.cs  PryanetAbout.cs  PryanetBubbles.cs  PryanetController.cs  PryanetEventLog.cs  PryanetMacWatcher.cs  PryanetSetup.cs  PryanetSetupWindow.cs  PryanetShare.csproj  PryanetShare.sln  PryanetStatusIcon.cs  PryanetUI.cs  README.md
PryanetShare/Mac/PryanetShareInviteOpener.app/Contents/: Info.plist
PryanetShare/Mac/PryanetShareInviteOpener.app/Contents/MacOS/: applet
PryanetShare/Mac/PryanetShareInviteOpener.app/Contents/Resources/: applet.icns  applet.rsrc
PryanetShare/Mac/PryanetShareInviteOpener.app/Contents/Resources/Scripts/: main.scpt
PryanetShare/Mac/PryanetShareInviteOpener.app/Contents/Resources/description.rtfd/: TXT.rtf
PryanetShare/Mac/Resources/: pryanetshare-app.icns  pryanetshare-folder.icns
PryanetShare/Windows/: LICENSE.rtf  PryanetAbout.cs  PryanetBubbles.cs  PryanetController.cs  PryanetEventLog.cs  PryanetNotifyIcon.cs  PryanetSetup.cs  PryanetSetupWindow.cs  PryanetShare.csproj  PryanetShare.sln  PryanetShare.sln.DotSettings  PryanetShare.wxs  PryanetShortcut.cs  PryanetSpinner.cs  PryanetStatusIcon.cs  PryanetUI.cs  PryanetUIHelpers.cs  README.md  Settings.StyleCop  build.cmd
PryanetShare/Windows/PryanetShareInviteOpener/: PryanetShareInviteOpener.csproj  pryanetshare-invite-opener.cs
PryanetShare/Windows/PryanetShareInviteOpener/Properties/: AssemblyInfo.cs
legal/: Authors.txt  Trademark.txt
